# kitti_parser

./: CMakeLists.txt  LICENSE  ReadMe.md
src/: main.cpp  main_image.cpp  main_text.cpp
src/kitti_parser/: Parser.cpp  Parser.h
src/kitti_parser/types/: gpsimu_t.h  lidar_t.h  stereo_t.h
src/kitti_parser/util/: Config.h  Loader.cpp  Loader.h
